--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<body>
+   <div id="map-container"></div>
 
+   <div id="ui-controls">
+       <div id="time-slider"></div>
+       <button id="btn-submit-report">Submit Video</button>
+   </div>
+
+   <script src="assets/js/map.js"></script>
+   <script src="assets/js/filters.js"></script>
+   <script src="assets/js/app.js"></script>
+</body>
