--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header id="main-header">
         <div class="header-left">
-            <img src="assets/icons/logo.png" alt="GeoGeeks Logo" class="logo">
+            <img src="assets/icons/GeoGeeks_logo.png" alt="GeoGeeks Logo" class="logo">
             <h1 class="platform-title">Հայաստանի Հանրապետությունում դիտված ջրհեղեղների տեղեկատվական հարթակ</h1>
         </div>
         
