--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
         
         <div class="header-right">
-            <a href="#" target="_blank" class="btn btn-submit">Submit Video</a>
-            <a href="#" class="btn btn-donate">Donate</a>
-            <button id="btn-more-info" class="btn btn-info">More Info</button>
+            <a href="#" target="_blank" class="btn btn-submit">Ներկայացբել տեսանյութ</a>
+            <a href="#" class="btn btn-donate">Նվիրաբերել</a>
+            <button id="btn-more-info" class="btn btn-info">Ավելին</button>
         </div>
     </header>
 
@@ -41,20 +41,21 @@
     <div id="info-modal" class="modal">
         <div class="modal-content">
             <span class="close-modal">&times;</span>
-            <h2>About This Platform</h2>
+            <h2>Հարթակի մասին</h2>
             <p>
-                Welcome to the <b>Flood Information Platform of Armenia</b>. 
-                This citizen-science initiative allows users to visualize historical flood data 
-                verified by geolocation and video evidence.
+                Բարի գալուստ <b>ՀՀ-ում ջրհեղեղների տեղեկատվական հարթակ</b>. 
+                Հարթակը հավաքագրում է սոցիալական մեդիայում օգտատերերի կողմից հրապարակված ջրհեղեղային երևույթների վերաբերող տեսանյութերը։
+                Մեկ հարթակում տեսանյութերի հավաքագրումը կօգնի պետական, մասնավոր, կրթական, գիտական և հասարակական ոլորտի մարդկանց ունենալ
+                համապարփակ պատկերացում Հայաստանում տեղի ունեցած ջրհեղեղների վերաբերյալ։
             </p>
-            <h3>How it Works</h3>
+            <h3>Ինչպե՞ս է հարթակն աշխատում</h3>
             <ul>
-                <li><b>View:</b> Browse the map to see flood events.</li>
-                <li><b>Filter:</b> Use the time slider below to filter by date.</li>
-                <li><b>Contribute:</b> Have a video of a flood? Click "Submit Video" to share it.</li>
+                <li><b>Դիտում:</b> Կուրսորի օգնությամբ տեղաշարժեք քարտեզը, որպեսզի տեսնեք ջրհեղեղի դեպքերը։</li>
+                <li><b>Ֆիլտրեր:</b> Օգտագործեք էկրանի ստորին մասում տեղակայված ժամանակային ֆիլտրը, որպեսզի տեսնեք ձեր ցանկացած ժամանակում տեղի ունեցած ջրհեղեղի երևույթը։</li>
+                <li><b>Մասնակցություն:</b> Եթե ունեք ջրհեղեղի վերաբերյալ տեսանյութ խնդրում ենք կիսվել մեզ հետ։</li>
             </ul>
             <p style="margin-top: 20px; font-size: 0.9em; color: #666;">
-                Developed by <b>GeoGeeks LLC</b>.
+                Հարթակը ստեղծվել է <b>GeoGeeks LLC</b> կողմից։
             </p>
         </div>
     </div>
