--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         
         <div class="header-right">
-            <a href="#" target="_blank" class="btn btn-submit">Ներկայացբել տեսանյութ</a>
+            <a href="#" target="_blank" class="btn btn-submit">Ներկայացնել տեսանյութ</a>
             <a href="#" class="btn btn-donate">Նվիրաբերել</a>
             <button id="btn-more-info" class="btn btn-info">Ավելին</button>
         </div>
