--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
             <span class="close-modal">&times;</span>
             <h2>Հարթակի մասին</h2>
             <p>
-                Բարի գալուստ <b>ՀՀ-ում ջրհեղեղների տեղեկատվական հարթակ</b>. 
-                Հարթակը հավաքագրում է սոցիալական մեդիայում օգտատերերի կողմից հրապարակված ջրհեղեղային երևույթների վերաբերող տեսանյութերը։
-                Մեկ հարթակում տեսանյութերի հավաքագրումը կօգնի պետական, մասնավոր, կրթական, գիտական և հասարակական ոլորտի մարդկանց ունենալ
+                Բարի գալուստ <b>ՀՀ-ում ջրհեղեղների տեղեկատվական հարթակ</b>։ 
+                Հարթակը հավաքագրում է սոցիալական ցանցերում օգտատերերի կողմից հրապարակված ջրհեղեղների վերաբերող տեսանյութերը։
+                Մեկ հարթակում տեսանյութերի հավաքագրումը կօգնի պետական, մասնավոր, կրթական, գիտական և հասարակական ոլորտներին ունենալ
                 համապարփակ պատկերացում Հայաստանում տեղի ունեցած ջրհեղեղների վերաբերյալ։
             </p>
             <h3>Ինչպե՞ս է հարթակն աշխատում</h3>
             <ul>
                 <li><b>Դիտում:</b> Կուրսորի օգնությամբ տեղաշարժեք քարտեզը, որպեսզի տեսնեք ջրհեղեղի դեպքերը։</li>
-                <li><b>Ֆիլտրեր:</b> Օգտագործեք էկրանի ստորին մասում տեղակայված ժամանակային ֆիլտրը, որպեսզի տեսնեք ձեր ցանկացած ժամանակում տեղի ունեցած ջրհեղեղի երևույթը։</li>
-                <li><b>Մասնակցություն:</b> Եթե ունեք ջրհեղեղի վերաբերյալ տեսանյութ խնդրում ենք կիսվել մեզ հետ։</li>
+                <li><b>Ֆիլտրեր:</b> Օգտագործեք էկրանի ստորին մասում տեղակայված ժամանակային ֆիլտրը, որպեսզի տեսնեք ձեր ցանկացած ժամանակահատվածում տեղի ունեցած ջրհեղեղի երևույթը։</li>
+                <li><b>Մասնակցություն:</b> Եթե ունեք ջրհեղեղի վերաբերյալ տեսանյութ խնդրում ենք կիսվել մեզ հետ՝ սեղմելով <b>Ներկայացնել տեսանյութ</b> կոճակը։</li>
             </ul>
             <p style="margin-top: 20px; font-size: 0.9em; color: #666;">
-                Հարթակը ստեղծվել է <b>GeoGeeks LLC</b> կողմից։
+                Հարթակը ստեղծվել է <b>GeoGeeks ՍՊԸ</b>-ի կողմից։
             </p>
         </div>
     </div>
