--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Armenia Flood Watch</title>
     
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Armenian:wght@100..900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.1/nouislider.min.css" />
     
@@ -34,8 +38,7 @@
 
     <div id="video-sidebar">
         <button id="close-sidebar" onclick="closeSidebar()">×</button>
-        <div id="sidebar-content">
-            </div>
+        <div id="sidebar-content"></div>
     </div>
 
     <div id="info-modal" class="modal">
@@ -44,7 +47,7 @@
             <h2>Հարթակի մասին</h2>
             <p>
                 Բարի գալուստ <b>ՀՀ-ում ջրհեղեղների տեղեկատվական հարթակ</b>։ 
-                Հարթակը հավաքագրում է սոցիալական ցանցերում օգտատերերի կողմից հրապարակված ջրհեղեղների վերաբերող տեսանյութերը։
+                Հարթակը հավաքագրում է սոցիալական ցանցերում օգտատերերի կողմից հրապարակված ջրհեղեղների վերաբերյալ տեսանյութերը։
                 Մեկ հարթակում տեսանյութերի հավաքագրումը կօգնի պետական, մասնավոր, կրթական, գիտական և հասարակական ոլորտներին ունենալ
                 համապարփակ պատկերացում Հայաստանում տեղի ունեցած ջրհեղեղների վերաբերյալ։
             </p>
