--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <h2>Ներկայացնել տեսանյութ</h2>
             
             <iframe 
-                src="PASTE_YOUR_GOOGLE_FORM_LINK_HERE" 
+                src="https://docs.google.com/forms/d/e/1FAIpQLSd2EOqbdgCfeMKRr6BKdMljUq8Typ8uP_Ji2M7f5M6qoaWc0g/viewform?embedded=true" 
                 class="google-form-frame"
                 title="Google Form">
                 Loading…
