--- a/index.html
+++ b/index.html
@@ -82,12 +82,7 @@
     <div id="submit-modal" class="modal">
         <div class="modal-content">
             <span class="close-modal" id="close-submit">&times;</span>
-           <iframe 
-                src="https://docs.google.com/forms/d/e/1FAIpQLSd2EOqbdgCfeMKRr6BKdMljUq8Typ8uP_Ji2M7f5M6qoaWc0g",
-                class="google-form-frame"
-                title="Google Form">
-                Loading…
-            </iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd2EOqbdgCfeMKRr6BKdMljUq8Typ8uP_Ji2M7f5M6qoaWc0g/viewform?embedded=true" width="640" height="1200" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
     </div>
 
