--- a/index.html
+++ b/index.html
@@ -82,8 +82,13 @@
     <div id="submit-modal" class="modal">
         <div class="modal-content">
             <span class="close-modal" id="close-submit">&times;</span>
-            <iframe class="google-form-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSd2EOqbdgCfeMKRr6BKdMljUq8Typ8uP_Ji2M7f5M6qoaWc0g/viewform?embedded=true" width="640" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-         </div>
+           <iframe 
+                src="https://docs.google.com/forms/d/e/1FAIpQLSd2EOqbdgCfeMKRr6BKdMljUq8Typ8uP_Ji2M7f5M6qoaWc0g/viewform?embedded=true" 
+                class="google-form-frame"
+                title="Google Form">
+                Loading…
+            </iframe>
+            </div>
     </div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
