--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <style>
         .google-form-frame {
             width: 100%;
-            height: 100%; /* Adjust height based on your form length */
+            height: 500px; /* Adjust height based on your form length */
             border: none;
             margin-top: 10px;
         }
